# FinA_LLMv2

./: .gitignore  Pipfile  README.md  companies.csv  data_sync.py  data_sync2.py  data_sync_main.py  dontshareconfig.py  endpoints.txt  pyproject.toml  readme.MD
CMS/: Untitled-1.ipynb  selected.csv
ids/: data_fetcher_assistant_id.txt  data_fetcher_thread_id.txt  documentation_assistant_id.txt  documentation_thread_id.txt  implementer_assistant_id.txt  implementer_thread_id.txt  researcher_assistant_id.txt  researcher_thread_id.txt  verifier_assistant_id.txt  verifier_thread_id.txt
scripts/: .gitignore  analyze_data.py  fetch_data.py  main.py  testfile.py
