[tool.poetry]
name = "dadosdem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
requests = "^2.32.3"
jupyter = "^1.0.0"
openai = "^1.30.5"
httpie = "^3.2.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
